force-app/main/default/objects/SSC__c/SSC__c.object-meta.xml
<CustomObject>
    <label>Seguimiento Soporte Corporativo</label>
    <nameField>
        <displayFormat>SSC-{00000}</displayFormat>
        <label>Task Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seguimientos Soporte Corporativo</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>