force-app/main/default/objects/SSC__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>