force-app/main/default/objects/SSC__c/fields/ID_Country_Manager__c.field-meta.xml
<CustomField>
    <fullName>ID_Country_Manager__c</fullName>
    <formula>Country__r.Country_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Responsable</label>
    <type>Text</type>
</CustomField>