force-app/main/default/objects/SSC__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abierto</fullName>
                <default>true</default>
                <label>Abierto</label>
            </value>
            <value>
                <fullName>En proceso</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
            <value>
                <fullName>Validado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>